--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
     </description>
     
     <issueManagement>
-  	    <system>phpbt</system>
-  	    <url>http://bugzilla.firebyte.org</url>
+  	    <system>github</system>
+  	    <url>https://github.com/jeffbeard/generic-jpa-dao/issues</url>
     </issueManagement>
     <ciManagement>
   	    <system>Hudson</system>
@@ -20,8 +20,8 @@
     </ciManagement>
     
     <scm>
-  	    <connection></connection>
-        <developerConnection></developerConnection>
+  	    <connection>scm:https://github.com/jeffbeard/generic-jpa-dao.git</connection>
+        <developerConnection>scm:https://github.com/jeffbeard/generic-jpa-dao.git</developerConnection>
     </scm>
  
 	<organization>
@@ -38,7 +38,7 @@
             <timezone>-7</timezone>
         </developer>        
     </developers>
-    
+
 	<build>
 		<plugins>
 			<plugin>
@@ -74,22 +74,52 @@
             </testResource>
         </testResources>
 	</build>
-	
+
+    <properties>
+
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <hibernate.dialect>org.hibernate.dialect.HSQLDialect</hibernate.dialect>
+        <jdbc.driverClassName>org.hsqldb.jdbcDriver</jdbc.driverClassName>
+        <jdbc.url>jdbc:hsqldb:file:consoledb;shutdown=true</jdbc.url>
+        <jdbc.username>sa</jdbc.username>
+        <jdbc.password></jdbc.password>
+
+        <spring.version>4.0.3.RELEASE</spring.version>
+        <hibernate.version>4.3.4.Final</hibernate.version>
+        <hsqldb.version>2.3.2</hsqldb.version>
+        <junit.version>4.11</junit.version>
+        <hamcrest.version>1.3</hamcrest.version>
+
+    </properties>
+
 	<dependencies>
-	    <dependency>
+
+        <dependency>
+            <groupId>org.hsqldb</groupId>
+            <artifactId>hsqldb</artifactId>
+            <version>${hsqldb.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
 	        <groupId>org.springframework</groupId>
 	        <artifactId>spring-core</artifactId>
-	        <version>3.0.5.RELEASE</version>
+	        <version>${spring.version}</version>
+	    </dependency>
+        <dependency>
+	        <groupId>org.springframework</groupId>
+	        <artifactId>spring-context</artifactId>
+	        <version>${spring.version}</version>
 	    </dependency>
 	    <dependency>
 	        <groupId>org.springframework</groupId>
 	        <artifactId>spring-orm</artifactId>
-	        <version>3.0.5.RELEASE</version>
+	        <version>${spring.version}</version>
 	    </dependency>   
 	    <dependency>
 	    	<groupId>org.hibernate</groupId>
 	    	<artifactId>hibernate-entitymanager</artifactId>
-	    	<version>3.4.0.GA</version>
+	    	<version>${hibernate.version}</version>
 	    </dependency>
 	    <dependency>
 	    	<groupId>org.slf4j</groupId>
@@ -97,20 +127,18 @@
 	    	<version>1.4.2</version>
 	    </dependency>
 	    <dependency>
-	    	<groupId>mysql</groupId>
-	    	<artifactId>mysql-connector-java</artifactId>
-	    	<version>5.1.15</version>
-	    </dependency>
-	    <dependency>
 	    	<groupId>junit</groupId>
 	    	<artifactId>junit</artifactId>
-	    	<version>4.8.2</version>
+	    	<version>4.11</version>
+            <scope>test</scope>
 	    </dependency>
-	    <dependency>
-	    	<groupId>log4j</groupId>
-	    	<artifactId>log4j</artifactId>
-	    	<version>1.2.12</version>
-	    </dependency>
+
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-core</artifactId>
+            <version>1.1.1</version>
+        </dependency>
+
 	    <dependency>
 	    	<groupId>commons-dbcp</groupId>
 	    	<artifactId>commons-dbcp</artifactId>
@@ -119,13 +147,13 @@
 	    <dependency>
 	    	<groupId>org.springframework</groupId>
 	    	<artifactId>spring-test</artifactId>
-	    	<version>3.0.5.RELEASE</version>
+	    	<version>${spring.version}</version>
 	    </dependency>
-	    <dependency>
-	    	<groupId>net.sf.ehcache</groupId>
-	    	<artifactId>ehcache-core</artifactId>
-	    	<version>2.3.1</version>
-	    </dependency>
+	    <!--<dependency>-->
+	    	<!--<groupId>net.sf.ehcache</groupId>-->
+	    	<!--<artifactId>ehcache-core</artifactId>-->
+	    	<!--<version>2.3.1</version>-->
+	    <!--</dependency>-->
 	    <dependency>
 	    	<groupId>org.slf4j</groupId>
 	    	<artifactId>slf4j-log4j12</artifactId>
@@ -136,7 +164,13 @@
 	    	<artifactId>commons-lang</artifactId>
 	    	<version>2.6</version>
 	    </dependency>
-    </dependencies>  
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-all</artifactId>
+            <version>${hamcrest.version}</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
     <distributionManagement>
         <snapshotRepository>
@@ -152,15 +186,4 @@
         </repository>       
     </distributionManagement>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <hibernate.dialect>org.hibernate.dialect.MySQL5InnoDBDialect</hibernate.dialect>
-        <jdbc.driverClassName>com.mysql.jdbc.Driver</jdbc.driverClassName>
-        <jdbc.url>
-            <![CDATA[jdbc:mysql://localhost/<database name>?autoReconnect=true]]>
-        </jdbc.url>
-        <jdbc.username>root</jdbc.username>
-        <jdbc.password></jdbc.password>
-    </properties>
-    
 </project>
