--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
 
     <developers>  
         <developer>
-            <id>beardj</id>
+            <id>jeffbeard</id>
             <name>Jeff Beard</name>
             <email>dev@firebyte.org</email>
             <organization>Firebyte</organization>
@@ -78,21 +78,86 @@
     <properties>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+        <spring.version>4.0.3.RELEASE</spring.version>
+        <hibernate.version>4.3.4.Final</hibernate.version>
+        <slf4j.version>1.4.2</slf4j.version>
+        <dbcp.version>1.3</dbcp.version>
+        <logback.version>1.1.1</logback.version>
+
+        <hsqldb.version>2.3.2</hsqldb.version>
+        <junit.version>4.11</junit.version>
+        <hamcrest.version>1.3</hamcrest.version>
+
         <hibernate.dialect>org.hibernate.dialect.HSQLDialect</hibernate.dialect>
         <jdbc.driverClassName>org.hsqldb.jdbcDriver</jdbc.driverClassName>
         <jdbc.url>jdbc:hsqldb:file:consoledb;shutdown=true</jdbc.url>
         <jdbc.username>sa</jdbc.username>
         <jdbc.password></jdbc.password>
 
-        <spring.version>4.0.3.RELEASE</spring.version>
-        <hibernate.version>4.3.4.Final</hibernate.version>
-        <hsqldb.version>2.3.2</hsqldb.version>
-        <junit.version>4.11</junit.version>
-        <hamcrest.version>1.3</hamcrest.version>
-
     </properties>
 
 	<dependencies>
+
+        <dependency>
+	        <groupId>org.springframework</groupId>
+	        <artifactId>spring-core</artifactId>
+	        <version>${spring.version}</version>
+            <scope>provided</scope>
+	    </dependency>
+
+        <dependency>
+	        <groupId>org.springframework</groupId>
+	        <artifactId>spring-context</artifactId>
+	        <version>${spring.version}</version>
+            <scope>provided</scope>
+	    </dependency>
+
+        <dependency>
+	        <groupId>org.springframework</groupId>
+	        <artifactId>spring-orm</artifactId>
+	        <version>${spring.version}</version>
+            <scope>provided</scope>
+	    </dependency>
+
+	    <dependency>
+	    	<groupId>org.hibernate</groupId>
+	    	<artifactId>hibernate-entitymanager</artifactId>
+	    	<version>${hibernate.version}</version>
+            <scope>provided</scope>
+	    </dependency>
+
+	    <dependency>
+	    	<groupId>org.slf4j</groupId>
+	    	<artifactId>slf4j-api</artifactId>
+	    	<version>${slf4j.version}</version>
+            <scope>provided</scope>
+	    </dependency>
+
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-core</artifactId>
+            <version>${logback.version}</version>
+        </dependency>
+
+	    <dependency>
+	    	<groupId>commons-dbcp</groupId>
+	    	<artifactId>commons-dbcp</artifactId>
+	    	<version>${dbcp.version}</version>
+	    </dependency>
+
+	    <dependency>
+	    	<groupId>org.slf4j</groupId>
+	    	<artifactId>slf4j-log4j12</artifactId>
+	    	<version>${slf4j.version}</version>
+	    </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
 
         <dependency>
             <groupId>org.hsqldb</groupId>
@@ -102,87 +167,32 @@
         </dependency>
 
         <dependency>
-	        <groupId>org.springframework</groupId>
-	        <artifactId>spring-core</artifactId>
-	        <version>${spring.version}</version>
-	    </dependency>
-        <dependency>
-	        <groupId>org.springframework</groupId>
-	        <artifactId>spring-context</artifactId>
-	        <version>${spring.version}</version>
-	    </dependency>
-	    <dependency>
-	        <groupId>org.springframework</groupId>
-	        <artifactId>spring-orm</artifactId>
-	        <version>${spring.version}</version>
-	    </dependency>   
-	    <dependency>
-	    	<groupId>org.hibernate</groupId>
-	    	<artifactId>hibernate-entitymanager</artifactId>
-	    	<version>${hibernate.version}</version>
-	    </dependency>
-	    <dependency>
-	    	<groupId>org.slf4j</groupId>
-	    	<artifactId>slf4j-api</artifactId>
-	    	<version>1.4.2</version>
-	    </dependency>
-	    <dependency>
-	    	<groupId>junit</groupId>
-	    	<artifactId>junit</artifactId>
-	    	<version>4.11</version>
-            <scope>test</scope>
-	    </dependency>
-
-        <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-core</artifactId>
-            <version>1.1.1</version>
-        </dependency>
-
-	    <dependency>
-	    	<groupId>commons-dbcp</groupId>
-	    	<artifactId>commons-dbcp</artifactId>
-	    	<version>1.3</version>
-	    </dependency>
-	    <dependency>
-	    	<groupId>org.springframework</groupId>
-	    	<artifactId>spring-test</artifactId>
-	    	<version>${spring.version}</version>
-	    </dependency>
-	    <!--<dependency>-->
-	    	<!--<groupId>net.sf.ehcache</groupId>-->
-	    	<!--<artifactId>ehcache-core</artifactId>-->
-	    	<!--<version>2.3.1</version>-->
-	    <!--</dependency>-->
-	    <dependency>
-	    	<groupId>org.slf4j</groupId>
-	    	<artifactId>slf4j-log4j12</artifactId>
-	    	<version>1.4.2</version>
-	    </dependency>
-	    <dependency>
-	    	<groupId>commons-lang</groupId>
-	    	<artifactId>commons-lang</artifactId>
-	    	<version>2.6</version>
-	    </dependency>
-        <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-all</artifactId>
             <version>${hamcrest.version}</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>${spring.version}</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <distributionManagement>
         <snapshotRepository>
             <id>maven2-repository</id>
             <name>Firebyte Snapshot Repository</name>
-            <url>http://mvnrepo.firebyte.org/nexus/content/repositories/snapshots</url>
+            <url>http://maven.firebyte.org/nexus/content/repositories/snapshots</url>
             <uniqueVersion>false</uniqueVersion>
         </snapshotRepository>
         <repository>
             <id>maven2-repository</id>
-            <name>COHomefinder Release Repository</name>
-            <url>http://mvnrepo.firebyte.org/nexus/content/repositories/releases</url>
+            <name>Firebyte Release Repository</name>
+            <url>http://maven.firebyte.org/nexus/content/repositories/releases</url>
         </repository>       
     </distributionManagement>
 
