--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
     </scm>
  
 	<organization>
-	  	<name>Firebyte, LLC</name>
+	  	<name>Firebyte</name>
 	  	<url>http://firebyte.org/</url>
     </organization>
 
@@ -46,8 +46,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>2.3.2</version>
 				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
+					<source>1.7</source>
+					<target>1.7</target>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -131,7 +131,6 @@
 	    	<groupId>org.slf4j</groupId>
 	    	<artifactId>slf4j-api</artifactId>
 	    	<version>${slf4j.version}</version>
-            <scope>provided</scope>
 	    </dependency>
 
         <dependency>
